# file_upload

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  preview.py  upload.py
app/models/: __init__.py  file.py
app/schemas/: __init__.py  upload.py
app/services/: __init__.py  callback_service.py  cleanup_service.py  download_service.py  preview_service.py  scan_service.py  upload_service.py
app/storage/: __init__.py  base.py  local.py  oss.py
app/utils/: __init__.py  hash.py  validators.py
data/: metadata.db
tests/: README.md  main.py
tests/client/: __init__.py  api.py  downloader.py  uploader.py
