[project]
name = "test"
version = "0.1.0"
description = "大文件上传下载服务"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]
